MyCloudFormation.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: Cloudformation template to create VPC private and public subnet 
Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Amazon EC2 Key Pair

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.31.0/16
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      CidrBlock: 10.0.31.0/24
      MapPublicIpOnLaunch: True
      Tags:
        -
          Key: Name
          Value: publicSubnet
      VpcId: !Ref myVPC
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2b
      CidrBlock: 10.0.131.0/24
      Tags:
        -
          Key: Name
          Value: privateSubnet
      VpcId: !Ref myVPC
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        -
          Key: Name
          Value: publicRT
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        -
          Key: Name
          Value: privateRT
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      -
        Key: Name
        Value: myIGW
  ElasticIPs:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGateWay:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIPs.AllocationId
      SubnetId: !Ref PublicSubnet
  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref myVPC
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateWay
      RouteTableId: !Ref PrivateRouteTable
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for public instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      Tags:
        -
          Key: Name
          Value: publicSG
      VpcId: !Ref myVPC
  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for private instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.0.31.0/16
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 10.0.31.0/16
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 10.0.31.0/16
        - IpProtocol: icmp
          FromPort: '8'
          ToPort: '-1'
          CidrIp: 10.0.31.0/16
      Tags:
        -
          Key: Name
          Value: privateSG
      VpcId: !Ref myVPC
  PublicInstance:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: ami-25615740
        InstanceType: t2.micro
        KeyName: !Ref KeyPair
        SubnetId: !Ref PublicSubnet
        SecurityGroupIds:
          - !Ref PublicSecurityGroup
        Tags:
          -
            Key: Name
            Value: publicInstance
  PrivateInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-25615740
      InstanceType: t2.micro
      KeyName: !Ref KeyPair
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref PrivateSecurityGroup
      Tags:
        -
          Key: Name
          Value: privateInstance
